[gd_scene load_steps=19 format=3 uid="uid://bt28qygtuoe15"]

[ext_resource type="Script" path="res://3D/3DManager.gd" id="1_386cp"]
[ext_resource type="PhysicsMaterial" path="res://3D/board_strong_friction_physics_material.tres" id="3_4kneq"]
[ext_resource type="Script" path="res://3D/boardbody.gd" id="3_kg7dr"]
[ext_resource type="PackedScene" uid="uid://boj2sy3is4apk" path="res://Scenes/HUD.tscn" id="4_8i3vt"]
[ext_resource type="Texture2D" uid="uid://pphmtaepns55" path="res://Resources/UI_background.png" id="4_lgqq2"]
[ext_resource type="Texture2D" uid="uid://dtk3srt7sb8f8" path="res://Resources/white.png" id="4_skp1u"]
[ext_resource type="Texture2D" uid="uid://cchoado2sc70k" path="res://Resources/UI_instruction.png" id="5_l7pf4"]
[ext_resource type="Texture2D" uid="uid://dll6ilcv2hvvo" path="res://Resources/UI_duck.png" id="6_pqh5u"]
[ext_resource type="Texture2D" uid="uid://utg2h3duo2p0" path="res://Resources/UI_subviewport_baxkground.png" id="6_u4pai"]

[sub_resource type="BoxMesh" id="BoxMesh_k8nur"]
size = Vector3(11.5, 0.5, 6.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_hwu3i"]
size = Vector3(10, 0.5, 6)

[sub_resource type="ViewportTexture" id="ViewportTexture_760vy"]
viewport_path = NodePath("2DSubViewport")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gh0cd"]
height = 10.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xjp4u"]
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1kspr"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_y10eo"]
material = SubResource("StandardMaterial3D_1kspr")
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_k82vx"]
bottom_radius = 2.0
height = 6.0

[sub_resource type="Theme" id="Theme_l2vb6"]

[node name="3DRoot" type="Node3D"]
script = ExtResource("1_386cp")

[node name="2DSubViewport" type="SubViewport" parent="."]
size = Vector2i(1152, 648)

[node name="Board" type="RigidBody3D" parent="."]
unique_name_in_owner = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
physics_material_override = ExtResource("3_4kneq")
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("3_kg7dr")

[node name="BoardMesh" type="MeshInstance3D" parent="Board"]
mesh = SubResource("BoxMesh_k8nur")

[node name="BoardCollider" type="CollisionShape3D" parent="Board"]
shape = SubResource("BoxShape3D_hwu3i")

[node name="Board" type="Sprite3D" parent="Board"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.251, 0)
layers = 2
axis = 1
texture = SubResource("ViewportTexture_760vy")

[node name="Stand" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.5, 0)

[node name="StandMesh" type="MeshInstance3D" parent="Stand"]
mesh = SubResource("CapsuleMesh_gh0cd")

[node name="StandCollider" type="CollisionShape3D" parent="Stand"]
shape = SubResource("CapsuleShape3D_xjp4u")

[node name="Stand_Red_Line" type="CPUParticles3D" parent="Stand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
top_level = true
lifetime = 5.0
mesh = SubResource("CylinderMesh_y10eo")
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0
color = Color(1, 0, 0, 1)

[node name="ConeMesh" type="MeshInstance3D" parent="Stand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
mesh = SubResource("CylinderMesh_k82vx")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.02088, 4.40299)
omni_range = 30.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_lgqq2")

[node name="InfoPanel" type="VBoxContainer" parent="Control/HBoxContainer/InfoPanel"]
layout_mode = 2
offset_right = 216.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="InstructionsRect" type="TextureRect" parent="Control/HBoxContainer/InfoPanel/InfoPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource("5_l7pf4")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/InfoPanel/InfoPanel/InstructionsRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="Control/HBoxContainer/InfoPanel/InfoPanel/InstructionsRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Level 5"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/InfoPanel/InfoPanel/InstructionsRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="InstructionsLabel" type="Label" parent="Control/HBoxContainer/InfoPanel/InfoPanel/InstructionsRect/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "1. WASD to move
2. R to restart
3. Esc to go to main menu
4. Keep your balance!
5. Have fun!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LogoRect" type="TextureRect" parent="Control/HBoxContainer/InfoPanel/InfoPanel"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_pqh5u")
stretch_mode = 5

[node name="DucklingCountLabel" type="Label" parent="Control/HBoxContainer/InfoPanel/InfoPanel/LogoRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -23.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewMargin" type="MarginContainer" parent="Control/HBoxContainer/InfoPanel/InfoPanel"]
layout_mode = 2

[node name="Bottom" type="TextureRect" parent="Control/HBoxContainer/InfoPanel/InfoPanel/SubViewMargin"]
layout_mode = 2
texture = ExtResource("6_u4pai")

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/InfoPanel/InfoPanel/SubViewMargin"]
layout_mode = 2
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 22

[node name="TiltViewport" type="SubViewportContainer" parent="Control/HBoxContainer/InfoPanel/InfoPanel/SubViewMargin/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_l2vb6")

[node name="SideSubViewport" type="SubViewport" parent="Control/HBoxContainer/InfoPanel/InfoPanel/SubViewMargin/MarginContainer/TiltViewport"]
handle_input_locally = false
size = Vector2i(160, 120)
render_target_update_mode = 4

[node name="Camera3D2" type="Camera3D" parent="Control/HBoxContainer/InfoPanel/InfoPanel/SubViewMargin/MarginContainer/TiltViewport/SideSubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9)
cull_mask = 1048573

[node name="Background" type="Sprite3D" parent="Control/HBoxContainer/InfoPanel/InfoPanel/SubViewMargin/MarginContainer/TiltViewport/SideSubViewport/Camera3D2"]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, -64)
modulate = Color(0.264353, 0.554207, 0.902462, 1)
texture = ExtResource("4_skp1u")

[node name="VSeparator" type="VSeparator" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="MainViewport" type="SubViewportContainer" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MainSubViewport" type="SubViewport" parent="Control/HBoxContainer/MainViewport"]
handle_input_locally = false
size = Vector2i(894, 648)
render_target_update_mode = 4

[node name="MainCamera3D" type="Camera3D" parent="Control/HBoxContainer/MainViewport/MainSubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.0871558, 0.996195, 0, -0.996195, 0.0871558, 0, 5.5, 0.5)

[node name="Hud" parent="." instance=ExtResource("4_8i3vt")]
